--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ input[type="radio"].visually-hidden {
   padding: 12px 12px 11px 49px;
   color: #ffffff;
   width: 270px;
+  height: 42px;
   background-color: transparent;
   border: none;
 }
@@ -310,7 +311,7 @@ input[type="radio"].visually-hidden {
 }
 
 .top-navigation .checkout {
-  padding: 12px 21px 12px;
+  padding: 12px 21px;
   background-color: #63a63e;
 }
 
@@ -908,7 +909,6 @@ input[type="radio"].visually-hidden {
 }
 
 .product-list .price-wrapper {
-  display: block;
   position: relative;
   height: 38px;
   background: url("../img/svg/red-button.svg") no-repeat center 0;
@@ -1439,8 +1439,50 @@ input[type="radio"].visually-hidden {
 }
 
 .modal {
+  position: fixed;
+  top: 10%;
+  z-index: 99;
   box-shadow: 0 0 14.72px 1.28px rgba(47, 42, 43, 0.5);
   border-top: solid 7px #ff5257;
+}
+
+.modal .modal-close {
+  position: absolute;
+  top: 9px;
+  right: 9px;
+
+  width: 21px;
+  height: 21px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+
+  cursor: pointer;
+}
+
+.modal .modal-close::before,
+.modal .modal-close::after {
+  content: "";
+
+  position: absolute;
+  top: 7px;
+  left: 0;
+
+  width: 23px;
+  height: 4px;
+
+  background-color: #ee3643;
+  border-radius: 2px;
+}
+
+.modal .modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal .modal-close::after {
+  transform: rotate(-45deg);
 }
 
 .modal .modal-footer {
@@ -1449,21 +1491,89 @@ input[type="radio"].visually-hidden {
 
 .modal-map {
   border-top: none;
+  line-height: 0;
 }
 
-.modal-callback label {
+.modal-cart,
+.modal-callback {
+  width: 620px;
+  background-color: #ffffff;
+  left: 50%;
+  margin-left: -310px;
+}
+
+.modal-callback .modal-body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modal-body {
+  padding: 37px 80px;
+}
+
+.modal-footer {
+  padding: 37px 80px;
+}
+
+.modal-footer {
+  display: flex;
+}
+
+.modal-footer .button {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.modal-footer .button + .button {
+  margin-left: 20px;
+}
+
+.callback-form p {
+  margin: 0;
+  width: 220px;
+}
+
+.callback-form .message-field {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.callback-form label {
   font-size: 18px;
 }
 
-.modal-callback textarea,
-.modal-callback input {
+.callback-form textarea,
+.callback-form input {
   font-family: "PT Sans", Arial, sans-serif;
+  width: 188px;
+  padding: 10px 14px;
 
   border: solid 2px #dee3e4;
   border-radius: 2px;
 }
-.modal-callback input::placeholder {
+
+.callback-form input::placeholder {
   color: #a9a9a9;
+}
+
+.callback-form textarea {
+  width: 428px;
+}
+
+.modal-cart .icon-accept:before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  display: block;
+  width: 66px;
+  height: 66px;
+  background: url("../img/svg/form-1.svg") no-repeat 0 0;
+}
+
+.modal-cart h2 {
+  padding-left: 100px;
 }
 
 .breadcrumbs {
@@ -1569,6 +1679,7 @@ input[type="radio"].visually-hidden {
 }
 
 .filter-price h3 {
+  display: block;
   margin: 15px 0;
 }
 
