--- a/css/style.css
+++ b/css/style.css
@@ -1055,6 +1055,7 @@ input[type="radio"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
 }
 
 .manufacturers .item a {
