--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ input[type="radio"].visually-hidden {
   height: 42px;
   background-color: transparent;
   border: none;
+  box-sizing: border-box;
 }
 
 .top-navigation .icon-search {
